# 1C_selection

Solitare/: CMakeLists.txt  README.md  game_graph.cpp  game_graph.hpp  main.cpp  parser.hpp  util.hpp
